--- a/index.html
+++ b/index.html
@@ -11,30 +11,75 @@
     <link rel="stylesheet" type="text/css" href="/public/style.css">
 </head>
 <body>
-<div id="app">
+<div id="app" v-cloak>
+	<div id="loading">Loading...</div>
     <div class="header">
         <div class="container">
             <div class="title">
                 <img src="public/logo.png">
                 <h1>Vue.js Poster Shop</h1>
             </div>
+			<form class="search-bar" v-on:submit.prevent="onSubmit">
+				<input type="text" placeholder="Search for posters" required v-model="search">
+				<type></type>
+				<input type="submit" class="btn" value="Search">
+			</form>
+			<p>Try search terms <em>cat, dog, flower</em></p>
         </div>
     </div>
     <div class="main container">
         <div class="products">
-            <p>Products go here.</p>
+			<div v-if="loading">
+				Loading...
+			</div>
+			<div class="search-results" v-else>
+				Found {{ results.length }} results for search term <em>{{ lastSearch }}</em>.
+			</div>
+			<div v-for="product in products" class="product" v-bind:key="product.id">
+				<div>
+					<div class="product-image">
+						<img v-bind:src="product.thumb" v-bind:alt="product.title">
+					</div>
+				</div>
+				<div>
+					<h4 class="product-title">{{ product.title }}</h4>
+					<p class="product-price"><strong>{{ product.price | currency }}</strong></p>
+					<button v-on:click="addToCart(product)" class="add-to-cart btn">Add to Cart</button>
+				</div>
+			</div>
+			<div id="product-list-bottom">
+				<div v-if="products.length === results.length && results.length > 0">
+					No more items.
+				</div>
+			</div>
         </div>
         <div class="cart">
             <h2>Shopping Cart</h2>
-            <div>
-                Total: $0.00
-            </div>
+			<div v-if="cart.length === 0" class="empty-cart">
+				No items in the Cart
+			</div>
+			<transition-group tag="ul" name="fade">
+				<li v-for="item in cart" v-bind:key="item.id" class="cart-item">
+					<div class="item-title">{{ item.title }}</div>
+					<span class="item-qty">{{ item.price | currency }} x {{ item.qty }}</span>
+					<button class="btn" v-on:click="inc(item)">+</button>
+					<button class="btn" v-on:click="dec(item)">-</button>
+				</li>
+			</transition-group>
+			<transition name="fade">
+				<div v-if="cart.length" class="cart-total">
+					Total: {{ total | currency }}
+				</div>
+			</transition>
         </div>
     </div>
 </div>
 
 <!-- Scripts -->
 <script src="/reload/reload.js"></script>
+<script src="node_modules/vue/dist/vue.js"></script>
+<script src="node_modules/vue-resource/dist/vue-resource.js"></script>
+<script src="node_modules/scrollmonitor/scrollMonitor.js"></script>
 <script type="text/javascript" src="public/script.js"></script>
 
 </body>
